--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,9 @@ a {
   padding: 50px 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   text-align: center;
+  margin: 0px 467px 0px;
 }
 
 #question {
@@ -31,15 +32,12 @@ a {
 }
 
 #ans {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 25px;
   display: none;
 }
 
 .answers {
   margin-top: 10px;
+  margin-bottom: 10px;
   background: rgb(92, 7, 92);
   color: white;
   border-radius: 15px;
@@ -58,6 +56,14 @@ button {
 
 #wrongPop {
   display: none;
+  margin-bottom: 20px;
+  font-style: italic;
+}
+
+#rightPop {
+  display: none;
+  margin-bottom: 20px;
+  font-style: italic;
 }
 
 #submit {
@@ -69,5 +75,10 @@ button {
 }
 
 #Highscores {
+  text-align: left;
   display: none;
+}
+
+#seeHighscores {
+  cursor: pointer;
 }
